--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -7,6 +7,7 @@
   <title>Manish Kumar Kamat | Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="{% static 'portfolio/style.css' %}">
+  <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
   <style>
     .profile-img {
       width: 180px;
