--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'portfolio/style.css' %}">
   <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
+  <script src="{% static 'portfolio/main.js' %}"></script>
 </head>
 <body>
 
@@ -36,8 +37,8 @@
     <div class="container intro">
       <img src="{% static 'portfolio/img.enc' %}" alt="Profile" class="profile-img">
       <div>
-        <h1>Manish Kumar Kamat</h1>
-        <p>Software Developer | Django &amp; Odoo | Python Enthusiast</p>
+        <h1 class="typing-name" data-text="Manish Kumar Kamat"></h1>
+        <p>Software Developer | Django &amp; Odoo </p>
         <a href="{% static 'portfolio/Manish_Kamat_Resume.pdf' %}" class="resume-button" download>Download Resume</a>
       </div>
     </div>
